<resources>
    <string name="app_name">Crowdie</string>
    <string name="main_question"><b>ARE YOU IN DANGER?</b></string>
    <string name="live_map">LIVE MAP</string>
    <string name="settings">SETTINGS</string>
    <string name="emergency">EMERGENCY</string>
    <string name="title_activity_map">Map</string>
    <string name="profile">PROFILE</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="supporter">SUPPORTER</string>
    <string name="action_done">Done</string>
    <string name="mark_skills_and_habilities_that_may_aid_in_emergency_situations">Mark skills and habilities that may aid in emergency situations</string>
    <string name="_1st_aid_practice">1st AID Practice</string>
    <string name="lifeguard">Lifeguard?</string>
    <string name="cpr_practice">CPR practice</string>
    <string name="mental_health_issues">Mental Health Issues</string>
    <string name="cardiovascular_diseases">Cardiovascular diseases</string>
    <string name="physically_disabled">Physically disabled</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="triggers">TRIGGERS</string>
    <string name="buttons_vol_pwr">BUTTONS (VOL + PWR)</string>
    <string name="voice_activation">VOICE ACTIVATION</string>
</resources>
