<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/section_label_supporter"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:text="@string/mark_skills_and_habilities_that_may_aid_in_emergency_situations"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@id/section_label_supporter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:textColor="@color/colorPrimaryLight"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/_1st_aid_practice"
                android:textSize="25sp"
                android:id="@+id/profile_has1stAidPractice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <CheckBox
                android:textColor="@color/colorPrimaryLight"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/lifeguard"
                android:textSize="25sp"
                android:id="@+id/profile_isLifeGuard"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:textColor="@color/colorPrimaryLight"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/cpr_practice"
                android:textSize="25sp"
                android:id="@+id/profile_hasCPRPractice"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
